add sidebar and resume downloader

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,4 +7,5 @@ html {
   /* background-image: url("/background.jpg");
   background-size: cover; */
   background-color: #000017;
+  color: #00001f;
 }
